--- a/services.html
+++ b/services.html
@@ -50,7 +50,7 @@ Author URL: http://w3layouts.com
               <a class="nav-link" href="services.html">Services</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact</a>
+              <a class="nav-link" href="contact.html">Contact Us</a>
             </li>
 
           </ul>
@@ -62,13 +62,13 @@ Author URL: http://w3layouts.com
         <div class="mobile-position">
           <nav class="navigation">
             <div class="theme-switch-wrapper">
-              <label class="theme-switch" for="checkbox">
+              <!--<label class="theme-switch" for="checkbox">
                 <input type="checkbox" id="checkbox">
                 <div class="mode-container">
                   <i class="gg-sun"></i>
                   <i class="gg-moon"></i>
                 </div>
-              </label>
+              </label>-->
             </div>
           </nav>
         </div>
