--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@ Author URL: http://sirgetechnoprice.com
         <div class="mobile-position">
           <nav class="navigation">
             <div class="theme-switch-wrapper">
-              <label class="theme-switch" for="checkbox">
+              <!--<label class="theme-switch" for="checkbox">
                 <input type="checkbox" id="checkbox">
                 <div class="mode-container">
                   <i class="gg-sun"></i>
                   <i class="gg-moon"></i>
                 </div>
-              </label>
+              </label>-->
             </div>
           </nav>
         </div>
